@@ -23,6 +23,8 @@ mesa (8.0~rc2-1) UNRELEASED; urgency=low
   * Enable vmwgfx gallium driver & xatracker. (Closes: #652501).
   * Build llvmpipe swrast only on non-hurd x86, traditional for the
     rest.
+  * rules: No need to copy nouveau_vieux to the gallium dir, it's
+    installed in libgl1-mesa-dri now.
 
   [ Robert Hooker ]
   * Bump libdrm build dep to 2.4.30, x11proto-gl-dev to 1.4.14, and
